force-app/main/default/objects/Program/fields/Ammontare_Disponibile__c.field-meta.xml
<CustomField>
    <fullName>Ammontare_Disponibile__c</fullName>
    <label>Ammontare Disponibile</label>
    <summarizedField>Anno_Reportistica__c.Ammontare_Disponibile__c</summarizedField>
    <summaryForeignKey>Anno_Reportistica__c.Programma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>