force-app/main/default/objects/Program/fields/Ammontare_Distribuito_Pagato__c.field-meta.xml
<CustomField>
    <fullName>Ammontare_Distribuito_Pagato__c</fullName>
    <label>Ammontare Distribuito Pagato</label>
    <summarizedField>Anno_Reportistica__c.Ammontare_Distribuzioni_Pagate__c</summarizedField>
    <summaryForeignKey>Anno_Reportistica__c.Programma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>