force-app/main/default/objects/Program/fields/Ammontare_Donazioni_Programma__c.field-meta.xml
<CustomField>
    <fullName>Ammontare_Donazioni_Programma__c</fullName>
    <label>Ammontare Donazioni Programma</label>
    <summarizedField>Anno_Reportistica__c.Ammontare_Donazioni_Anno_Corrente__c</summarizedField>
    <summaryForeignKey>Anno_Reportistica__c.Programma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>