force-app/main/default/objects/Program/fields/Ammontare_Originale_Donato__c.field-meta.xml
<CustomField>
    <fullName>Ammontare_Originale_Donato__c</fullName>
    <label>Ammontare Originale Donato</label>
    <summarizedField>Anno_Reportistica__c.Ammontare_Originale_Donato__c</summarizedField>
    <summaryForeignKey>Anno_Reportistica__c.Programma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>