force-app/main/default/objects/Program/fields/Capienza__c.field-meta.xml
<CustomField>
    <fullName>Capienza__c</fullName>
    <label>Capienza</label>
    <summarizedField>Anno_Reportistica__c.Capienza_budgets__c</summarizedField>
    <summaryForeignKey>Anno_Reportistica__c.Programma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>