force-app/main/default/objects/Program/fields/NON_Allocato__c.field-meta.xml
<CustomField>
    <fullName>NON_Allocato__c</fullName>
    <formula>Ammontare_Donazioni_Programma__c -  Ammontare_Distribuzioni__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NON Allocato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>