force-app/main/default/objects/Program/fields/Numero_Fatture__c.field-meta.xml
<CustomField>
    <fullName>Numero_Fatture__c</fullName>
    <label>Numero Fatture</label>
    <summarizedField>Anno_Reportistica__c.Totale_Numero_Fatture__c</summarizedField>
    <summaryForeignKey>Anno_Reportistica__c.Programma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>