force-app/main/default/objects/Program/fields/Numero_Totale_di_Visite__c.field-meta.xml
<CustomField>
    <fullName>Numero_Totale_di_Visite__c</fullName>
    <label>Numero Totale di Visite</label>
    <summarizedField>Anno_Reportistica__c.Totale_Visite_Budgets__c</summarizedField>
    <summaryForeignKey>Anno_Reportistica__c.Programma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>