force-app/main/default/objects/Program/fields/Pagamenti_Aperti__c.field-meta.xml
<CustomField>
    <fullName>Pagamenti_Aperti__c</fullName>
    <label>Pagamenti Aperti</label>
    <summarizedField>Anno_Reportistica__c.Pagamenti_Aperti__c</summarizedField>
    <summaryForeignKey>Anno_Reportistica__c.Programma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>