force-app/main/default/objects/Program/fields/Pagamenti_Chiusi__c.field-meta.xml
<CustomField>
    <fullName>Pagamenti_Chiusi__c</fullName>
    <label>Pagamenti Chiusi</label>
    <summarizedField>Anno_Reportistica__c.Pagamenti_Pagati__c</summarizedField>
    <summaryForeignKey>Anno_Reportistica__c.Programma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>