force-app/main/default/objects/Program/fields/Totale_Ammontare_Fatturato__c.field-meta.xml
<CustomField>
    <fullName>Totale_Ammontare_Fatturato__c</fullName>
    <label>Totale Ammontare Fatturato</label>
    <summarizedField>Anno_Reportistica__c.Totale_Fatturato_Budgets__c</summarizedField>
    <summaryForeignKey>Anno_Reportistica__c.Programma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>