force-app/main/default/objects/Program/fields/Totale_Minuti_di_Visita__c.field-meta.xml
<CustomField>
    <fullName>Totale_Minuti_di_Visita__c</fullName>
    <label>Totale Minuti di Visita</label>
    <summarizedField>Anno_Reportistica__c.Totale_Minuti_Visite_Budgets__c</summarizedField>
    <summaryForeignKey>Anno_Reportistica__c.Programma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>