force-app/main/default/objects/Program/fields/Totale_Numero_Biglietti__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_Biglietti__c</fullName>
    <label>Totale Numero Esperienze</label>
    <summarizedField>Anno_Reportistica__c.Totale_Numero_Biglietti__c</summarizedField>
    <summaryForeignKey>Anno_Reportistica__c.Programma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>