force-app/main/default/objects/Program/listViews/All_Programs.listView-meta.xml
<ListView>
    <fullName>All_Programs</fullName>
    <columns>Name</columns>
    <columns>StartDate</columns>
    <columns>Status</columns>
    <columns>Ammontare_Originale_Donato__c</columns>
    <columns>Ammontare_Donazioni_Programma__c</columns>
    <columns>Ammontare_Distribuzioni__c</columns>
    <columns>Totale_Ammontare_Fatturato__c</columns>
    <columns>Capienza__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Programmi</label>
</ListView>